tests/error/poly_errors_py312/non_copyable1.py
from guppylang import qubit
from guppylang.decorator import guppy


@guppy
def main[Q: qubit]() -> None:
    pass


guppy.compile(main)
