tests/error/poly_errors_py312/non_copyable1.err
Error: Invalid parameter (at $FILE:6:12)
  | 
4 | 
5 | @guppy
6 | def main[Q: qubit]() -> None:
  |             ^^^^^ Non-copyable type `qubit` is not allowed as a generic
  |                   parameter

Guppy compilation failed due to 1 previous error
